# soccer_bot

./: .env.example  .gitignore  AGENTS.md  CLEANUP_AUDIT.md  COLLECTOR_IMPLEMENTATION_PLAN.md  CONFIRMED_LINEUP_PLAYER_MODEL.md  DAILY_COLLECTION_REWORK.md  DATA_ARCHITECTURE.md  DATA_SOURCE_AUDIT.md  DESIGN.md  FIRST_SCORE_TIMING_V1.md  FORECASTING_SYSTEM_DESIGN.md  JOINT_CORNERS_V1.md  OPERATIONAL_ALERTING.md  PHASE_1_REVIEW_AND_PHASE_2_PLAN.md  POLYMARKET_MARKET_EVIDENCE.md  PREDICTION_CONTRACT_CATALOG.md  PRODUCT_VISION_AND_BUILD_PLAN.md  PROSPECTIVE_EVALUATION_PROGRAM.md  PROSPECTIVE_SETTLEMENT_LEDGER.md  RAILWAY_APPLICATION_DEPLOYMENT.md  RAILWAY_OPERATIONS.md  README.md  REGULATION_CHAMPION_MODEL.md  REGULATION_MODEL_TECHNICAL_REFERENCE.md  REGULATION_SCORE_GRID_V2_RESEARCH.md  REGULATION_SCORE_GRID_V3_SHADOW.md  REGULATION_SCORE_SPECIALIST_V1.md  SPECIALIZED_FORECASTING_PLATFORM_V2_SPEC.md  TODO.md  pyproject.toml  railway.api.json  railway.json  requirements.txt
apps/: __init__.py
config/: api_football_coverage_audit.json  backfill.json  collector.json  entity_aliases.json  probe_cases.json
migrations/: 001_initial.sql  002_collector.sql  003_expand_player_match_stats.sql  004_rekey_api_football_events.sql  005_historical_backfill.sql  006_fixture_model_eligibility.sql  007_collector_rework.sql  008_component_collection_state.sql  009_adaptive_lineup_collection.sql  010_player_identity_safety.sql  011_phase_1_5_audit_fixes.sql  012_remaining_collector_phases.sql  013_correction_refresh_chronology.sql  014_polymarket_market_evidence.sql
tests/: test_loaders.py  (+54 more)
(+186 files in other folders)
