[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-bot"
version = "0.1.0"
description = "Soccer data validation and forecasting research project"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.5,<2",
  "pytz>=2025.2",
]

[tool.setuptools.packages.find]
where = ["src"]
